--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ header ul li a{
 .main{
   width: 100%;
   height: 594px;
-  background: url(/img/fondo.jpg);
+  background: url(./img/fondo.jpg);
 }
 @media (min-width:769px){
   .main{
